# native-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  copy_shaders.sh  events.cpp  index.cpp  legacy-make
.zed/: debug.json
assets/: gorila.glb
include/: events.h  input.h
lib/: CMakeLists.txt  camera.cpp  events.cpp  gl_renderer.cpp  loaders.cpp  mat4.cpp  raycast.cpp  render_program.cpp  scene.cpp  vec.cpp
lib/gl/: basic_color_render_program.cpp  gl_renderer.cpp  render_program.cpp  texture_render_program.cpp
lib/include/: app_state.h  camera.h  gl_renderer.h  input.h  light.h  loaders.h  material.h  mesh.h  mystl.hpp  raycast.h  render_program.h  scene.h  std_imports.h
lib/shaders/: basic-texture.frag  basic-texture.vert  basic.frag
mygl/: CMakeLists.txt  basic_color_render_program.cpp  gl_renderer.cpp  render_program.cpp
mygl/include/: app_state.h  gl_renderer.h  sdl_state.h
mym/: CMakeLists.txt  mat4.cpp  math_utils.cpp  vec.cpp
mym/include/: mat4.h  vec.h
tests/: CMakeLists.txt  raycast_scene_tests.cpp  raycast_triangle_tests.cpp  raycast_vertices_tests.cpp  test_helpers.cpp  tests.cpp
tests/include/: test_helpers.h
